Fix form alignment

--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -1,10 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans&family=Noto+Sans+JP&display=swap');
 
 :root {
-    --heading-font-family:'noto sans',sans-serif;
-    --text-font-family:JP, san-serif;
-    --bg-color:#444444;
+    --heading-font-family: 'noto sans', sans-serif;
+    --text-font-family: JP, san-serif;
+    --bg-color: #444444;
 }
+
 
 body {
     padding-top: 70px;
@@ -12,7 +13,8 @@ body {
     color: var(--bg-color)
 }
 
-h1,h2 {
+h1,
+h2 {
     font-family: var(--heading-font-family);
 }
 
@@ -36,17 +38,18 @@ footer {
     height: 50px;
     margin: 10px 0 -10px;
     padding-bottom: 0;
-     text-decoration: none;
+    text-decoration: none;
     color: #fdf5e6;
     list-style: none;
-} 
+}
 
 footer .logo-img {
-   height: 50px;
-   width: 50px;
-   margin: 0;
-   padding: 0;
- }
+    height: 50px;
+    width: 50px;
+    margin: 0;
+    padding: 0;
+}
+
 footer span {
     padding: 10px 0;
 }
@@ -56,7 +59,7 @@ footer span {
     list-style: none;
     letter-spacing: 10px;
     display: inline-flex;
-    }
+}
 
 /* Hero image */
 
@@ -64,69 +67,77 @@ footer span {
     height: 300px;
     background: url(../images/hero-image.jpg) fixed;
     margin-bottom: 10px;
-    
- }
 
- .hero-text {
-     position: relative;
-     left: 3vw;
-     width: 300px;
-     height: auto;
-     padding: 30px;
-     margin-top: 30px;
-     border-radius: 10%;
-     background-color: rgb(253, 245, 230,0.5);
-     color: #1d1b14;
- }
+}
 
- input {
-     width: 200px;
- }
+.hero-text {
+    position: relative;
+    left: 3vw;
+    width: 300px;
+    height: auto;
+    padding: 30px;
+    margin-top: 30px;
+    border-radius: 10%;
+    background-color: rgb(253, 245, 230, 0.5);
+    color: #1d1b14;
+}
+
+input,
+select {
+    width: 200px;
+    height: 30px;
+}
 
 /*Feedback page */
 
- .feedback_img {
-     background-image:url(../images/feedback_img.jpg);
-     height: 300px;
-     background-repeat: no-repeat;
-     background-size: cover;
- }
- 
+.feedback_img {
+    background-image: url(../images/feedback_img.jpg);
+    height: 300px;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.vertical-top {
+    display: inline;
+    vertical-align: top;
+    width: 150px;
+}
+
 label {
-    width: 200px;
+    width: 120px;
 }
 
 /* Feedback form */
 
-.grid-container {
+.fb-grid-container {
     display: grid;
-    grid-template-columns: 1fr 1fr 0.3fr 1fr 1fr;
-    grid-template-rows: 1fr 1fr 3fr 3fr 1fr;
- }
+    grid-template-columns: 2fr 2fr 1fr 2fr 2fr;
+    grid-template-rows: 1fr 1fr 3fr 1fr;
+    }
 
- /* aligning form elements with grid */
+/* aligning form elements with grid */
 
- #form-name {
-     grid-row: 1/2;
-     grid-column: 2/4;
- }
-
- #form-email {
+#form-name {
     grid-row: 1/2;
-    grid-column: 4/5;
- }
-
- #form-concern {
-    grid-row: 2;
     grid-column: 2/4;
- }
+}
 
- #form-comment {
-    grid-row: 3;
+#form-email {
+    grid-row: 1/2;
+    grid-column: 4/6;
+}
+
+#form-concern {
+    grid-row: 2/3;
     grid-column: 2/4;
- }
+}
 
- #form-send {
-    grid-row: 4;
-    grid-column: 3;
- }
+#form-comment {
+    grid-row: 3/4;
+    grid-column: 2/5;
+}
+
+#form-send {
+    grid-row: 4/5;
+    grid-column: 3/4;
+}
